The Other input field - Introduce a new survey setting which would manage the number of rows for all comments/other fields throughout a questionnaire (#8481)
* resolve #8465 The Other input field - Introduce a new survey setting which would manage the number of rows for all comments/other fields throughout a questionnaire

* work for #8465 rename property

---------

Co-authored-by: OlgaLarina <olga.larina.dev@gmail.com>

--- a/packages/survey-angular-ui/src/comment-other.component.html
+++ b/packages/survey-angular-ui/src/comment-other.component.html
@@ -1,6 +1,7 @@
 <textarea *ngIf="!question.isReadOnlyRenderDiv()" [id]="otherId" [attr.maxlength]="question.getOthersMaxLength()"  [attr.aria-required]="question.ariaRequired || question.a11y_input_ariaRequired" [attr.aria-label]="question.ariaLabel || question.a11y_input_ariaLabel" [attr.placeholder]="otherPlaceholder" 
   [value]="otherValue"
   [style.resize]="question.resizeStyle"
+  [attr.rows]="question.commentAreaRows"
   [disabled]="question.isInputReadOnly"
   (change)="onOtherValueChange($event)"
   (input)="onOtherValueInput($event)"
