--- a/src/main.scss
+++ b/src/main.scss
@@ -1036,5 +1036,21 @@ body {
   }
 }
 
+.sv-drag-drop-choices-shortcut {
+  cursor: grabbing;
+  position: absolute;
+  z-index: 10000;
+  font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-family)));
+}
+
+.sv-drag-drop-choices-shortcut__content {
+  min-width: 100px;
+  box-shadow: var(--sjs-shadow-large, 0px 8px 16px 0px rgba(0, 0, 0, 0.1)), var(--sjs-shadow-medium, 0px 2px 6px 0px rgba(0, 0, 0, 0.1));
+  background-color: var(--sjs-general-backcolor, var(--background, #fff));
+  border-radius: calc(4.5 * var(--sjs-base-unit, var(--base-unit, 8px)));
+  padding-right: calc(2* var(--sjs-base-unit, var(--base-unit, 8px)));
+  margin-left: 0;
+}
+
 @import "./main-default-theme.scss";
 @import "./default-styles.scss";
