work for the https://github.com/surveyjs/survey-library/issues/7358

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -10,7 +10,6 @@
 .sv-ranking-item {
   cursor: pointer;
   position: relative;
-  height: calcSize(6);
   opacity: 1;
 }
 
@@ -121,6 +120,11 @@
   font-size: $font-editorfont-size;
   line-height: multiply(1.5, $font-editorfont-size);
   margin: 0 calcSize(2);
+
+  .sv-string-viewer {
+    overflow: initial;
+    white-space: pre-line;
+  }
 }
 
 .sd-ranking--disabled .sv-ranking-item__text {
@@ -162,6 +166,10 @@
 [dir="rtl"] .sv-ranking-item__ghost {
   left: initilal;
   right: calcSize(5);
+}
+
+.sv-ranking-item--ghost {
+  height: calcSize(6);
 }
 
 .sv-ranking-item--ghost .sv-ranking-item__ghost {
@@ -258,6 +266,17 @@
   box-shadow: var(--sjs-shadow-medium, 0px 2px 6px 0px rgba(0, 0, 0, 0.1)), var(--sjs-shadow-large, 0px 8px 16px 0px rgba(0, 0, 0, 0.1));
   background-color: var(--sjs-general-backcolor, var(--background, #fff));
   font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-family)));
+
+  .sv-ranking-item {
+    height: calcSize(6);
+
+    .sv-ranking-item__text {
+      .sv-string-viewer {
+        overflow: hidden;
+        white-space: nowrap;
+      }
+    }
+  }
 }
 
 .sv-ranking--select-to-rank {
