#8528 Radiogroup items appear in a single column regardless of the colCount property value when the Panelless theme mode is enabled Fixes #8528

--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -96,6 +96,10 @@
   }
 }
 
+.sd-root--compact .sd-title .sv-title-actions {
+  width: 100%;
+}
+
 .sd-action-title-bar {
   flex: 1 9 auto;
   min-width: calcSize(6);
