Fixed #8578 - A progress bar which appears below the form header overlaps a page's title and description

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -133,7 +133,8 @@ body {
   }
 }
 
-.sv-root--sticky-top.sd-progress--pages {
+.sv-root--sticky-top.sd-progress--pages,
+.sv-root--sticky-top.sd-progress--buttons {
   .sv-components-container-center {
     background-color: $background-dim;
     box-shadow: $shadow-medium, $shadow-small;
